tests/cases/fail/throw_uncaught.cs
class Program {
    static void Main() {
        throw "fatal";
    }
}
